# rpg_texto

./: .gitignore  Pipfile  README.md  arrumar_codigo.sh  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.py  source.sh  tox.ini
jogo/: anotacoes.py  decoradores.py  excecoes.py  experiencia.py  funcionabilidades.py  pets.py  quests.py  save.py  utils.py
jogo/assincrono/: combate.py
jogo/excecoes/: locais.py
jogo/itens/: armas.py  caixas.py  item_secundario.py  itens.py  moedas.py  pocoes.py  quest.py  vestes.py
jogo/locais/: areas_abertas.py  areas_fechadas.py  cavernas.py  habitaveis.py
jogo/personagens/: classes.py  monstros.py  npc.py
jogo/quests/: funcoes_quests.py  quests.py
jogo/tela/: capturar_teclas.py  imprimir.py  menu.py  tela_principal.py
testes/: test_locais_cavernas.py  test_personagens_classes.py  test_tela_imprimir.py
tests/: test_itens_armas.py  test_itens_armas_item_secundario_vestes.py  test_itens_pocoes.py  test_personagens_classes_pessoa.py  test_personagens_monstros.py  test_personagens_mostros.py  test_personagens_npc_ferreiro.py  test_pessoa.py  test_utils.py
