[tool.poetry]
name = "rpg_texto"
version = "0.1.0"
description = ""
authors = ["b166erobot <bernard0freitas@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "2.1.2"

[tool.poetry.dev-dependencies]
radon = "^5.1.0"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
radon = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
