[tool.poetry]
name = "rpg-texto"
version = "0.1.0"
description = ""
authors = ["b166erobot <bernard0freitas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.1.2"

[tool.poetry.group.dev.dependencies]
radon = "^6.0.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
